--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,7 @@
 name: ASR
 main: iJoshuaHD\iMCPE\ASR\Loader
-version: 2.0.3
-api: [1.12.0, 3.0.0-ALPHA5, 3.0.0-ALPHA6, 3.0.0-ALPHA7, 3.0.0-ALPHA8, 3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
+version: 2.0.3.1
+api: [3.0.0-ALPHA9, 3.0.0-ALPHA10, 3.0.0-ALPHA11]
 load: STARTUP
 author: iJoshuaHD
 description: Restarts your server at given interval.
